<resources>
    <string name="app_name">rockpaperscissor-gui</string>
    <string name="kertas_desc">hand paper image</string>
    <string name="batu_desc">hand rock image</string>
    <string name="gunting_desc">hand scissor image</string>
    <string name="player1_title">PeMaIN 1</string>
    <string name="computer_title">COM</string>
    <string name="refresh_button">Refresh button</string>
    <string name="versus">VS</string>
    <string name="text_you_won">YOU WON!</string>
    <string name="text_computer_won">COMPUTER \n WON!</string>
    <string name="text_draw">DRAW</string>
    <string name="text_splash_desc_1">Bermain sulit melawan sesama pemain</string>
    <string name="text_splash_desc_2">Bermain sulit melawan komputer.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_menu">PILIH LAWANMU</string>
    <string name="text_menu_vs_player">%1$s vs Pemain</string>
    <string name="text_menu_vs_cpu">%1$s vs CPU</string>
    <string name="text_toast_chosen_weapon">%s Memilih %s</string>
    <string name="text_player_2">Pemain 2</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <string name="robot_illustration">Robot Illustration</string>
    <string name="a_man_and_woman_talk_on_a_bench">A man and woman talk on a bench</string>
    <string name="logo_game">Logo Game</string>
</resources>